; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_get_stats_option_name.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_get_stats_option_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@optarg = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [17 x i8] c"log_parser_stats\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"log_planner_stats\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"log_executor_stats\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_stats_option_name(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = getelementptr inbounds i8, i8* %4, i64 0
  %6 = load i8, i8* %5, align 1
  %7 = sext i8 %6 to i32
  switch i32 %7, label %25 [
    i32 112, label %8
    i32 101, label %24
  ]

8:                                                ; preds = %1
  %9 = load i8*, i8** @optarg, align 8
  %10 = getelementptr inbounds i8, i8* %9, i64 1
  %11 = load i8, i8* %10, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp eq i32 %12, 97
  br i1 %13, label %14, label %15

14:                                               ; preds = %8
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %26

15:                                               ; preds = %8
  %16 = load i8*, i8** @optarg, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 1
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 108
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %26

22:                                               ; preds = %15
  br label %23

23:                                               ; preds = %22
  br label %25

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %26

25:                                               ; preds = %1, %23
  store i8* null, i8** %2, align 8
  br label %26

26:                                               ; preds = %25, %24, %21, %14
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
